updates on js and css

--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ font-size: 27px;
 }
 .card{
 background-image: url(https://image.freepik.com/free-vector/abstract-technology-binary-code-background_6735-500.jpg);
-margin-bottom: 20px;
-margin-left: 20px;
-margin-right: 20px;
+margin: 10px auto;
 
 margin-top: 20px;
 
